--- a/src/components/ToolBar/ToolBar.css
+++ b/src/components/ToolBar/ToolBar.css
@@ -1,6 +1,6 @@
 ul#tool-bar {
   display: flex;
-  gap: 1.25rem;
+  gap: 0.625rem;
   list-style: none;
   padding: 0.25rem 0.625rem;
   border: 1px solid var(--dark-gray-color);
